--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot.main.class>io.adabox.snapshotter.Main</spring-boot.main.class>
+        <logzio-log4j2-appender.version>2.0.0</logzio-log4j2-appender.version>
+        <log4j-slf4j-impl.version>2.22.1</log4j-slf4j-impl.version>
         <cardano-client-lib.version>0.5.2-SNAPSHOT</cardano-client-lib.version>
         <lombok.version>1.18.30</lombok.version>
         <jackson.version>2.15.4</jackson.version>
@@ -41,6 +43,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.logz.logback</groupId>
+            <artifactId>logzio-logback-appender</artifactId>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
