--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>io.adabox</groupId>
     <artifactId>snapshotter</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Cardano Snapshotter</description>
     <url>https://github.com/adabox-aio/snapshotter</url>
@@ -22,8 +22,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-boot.main.class>io.adabox.snapshotter.Main</spring-boot.main.class>
-        <logzio-log4j2-appender.version>2.0.0</logzio-log4j2-appender.version>
-        <log4j-slf4j-impl.version>2.22.1</log4j-slf4j-impl.version>
+        <logzio-logback-appender.version>2.0.0</logzio-logback-appender.version>
         <cardano-client-lib.version>0.5.2-SNAPSHOT</cardano-client-lib.version>
         <lombok.version>1.18.30</lombok.version>
         <jackson.version>2.15.4</jackson.version>
@@ -47,7 +46,7 @@
         <dependency>
             <groupId>io.logz.logback</groupId>
             <artifactId>logzio-logback-appender</artifactId>
-            <version>2.0.0</version>
+            <version>${logzio-logback-appender.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
