--- a/pom.xml
+++ b/pom.xml
@@ -8,20 +8,20 @@
         <relativePath/>
     </parent>
 
-    <groupId>io.gerowallet</groupId>
+    <groupId>io.infinitypools</groupId>
     <artifactId>infinity-pools-snapshotter</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.7</version>
+    <version>1.0.9</version>
     <name>${project.groupId}:${project.artifactId}</name>
-    <description>Cardano InfinityPools Snapshotter</description>
-    <url>https://github.com/adabox-aio/snapshotter</url>
+    <description>Gero Labs InfinityPools Snapshotter</description>
+    <url>https://github.com/Gero-Labs/infinity-pools-snapshotter</url>
 
     <properties>
         <java.version>21</java.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-boot.main.class>io.gerowallet.snapshotter.Main</spring-boot.main.class>
+        <spring-boot.main.class>io.infinitypools.snapshotter.Main</spring-boot.main.class>
         <logzio-logback-appender.version>2.0.0</logzio-logback-appender.version>
         <cardano-client-lib.version>0.5.2-SNAPSHOT</cardano-client-lib.version>
         <lombok.version>1.18.30</lombok.version>
